# mirage

./: .gitignore  COMPETITION_ROADMAP.md  COMPETITION_RULES.md  Guide for players.txt  LICENSE  README.md  SCORING.md  SUMMARY.md  _test.ipynb  code_from_practice.py  code_from_practice_modified.py  competition_evaluation.ipynb  epidemic-two.ipynb  playground.ipynb  practice_test.py  pyproject.toml  requirements.txt  run_engine_tests.py  strategy_comparison_results.csv  test_fixed_engine.py  test_simple.py  variant_test.py
Documentation/: 01_Introduction.md  02_How_To_Play.md  03_Intervention_Strategies.md  05_Scenarios.md  06_FAQ.md  07_Enhanced_Engine_and_Variants.md  08_Game_Architecture.md  09_Improving_Strategy_Differentiation.md  10_Engine_Parameters.md  11_Comprehensive_Player_Guide.md  12_Intervention_Functions_Reference.md  13_Custom_Intervention_Guide.md  14_Competition_Evaluation_Guide.md  15_Troubleshooting_Guide.md  README.md  competition_api_reference.md  strategy_development_guide.md
core/: __init__.py
core/configs/: countries.json
core/entity/: __init__.py  base.py  country.py
examples/: competition_demo.py  metrics_visualization_example.py  strategy_testing.py
notebooks/: README.md  competition_evaluation.ipynb  competition_evaluation_backup.ipynb  competition_playground.ipynb  competition_tutorial.ipynb  create_competition_notebook.py  epidemic-two.ipynb  integration_test.ipynb  practice_playground.ipynb  practice_strategies.ipynb  strategy_examples.ipynb  test_simple.py  test_simple_last_line.py  test_simulation.py  tutorial_leaderboard.html
notebooks/hidden/: epidemic-two.ipynb
scripts/: backup_competition_data.py  strategy_test.py
src/: __init__.py
src/competition/: README.md  ROADMAP.md  __init__.py  api.py  competition_manager.py  competition_manager_backup.py  demo.py  models.py  web_implementation_sample.py
src/engines/: __init__.py  base.py  firefly.py
src/entities/: __init__.py  base.py  country.py  engine_state.py
testing/: README.md  __init__.py  run_tests.py  test_save_attempt.py
tests/: engine_comparison_results.csv  engine_strategy_test.py  enhanced_engine_test.py  test_adaptive_strategies.py  test_evaluation.py
(+91 files in other folders)
